--- a/index.html
+++ b/index.html
@@ -34,15 +34,13 @@
         <div class='box-b'>
             <p class="title">List Items </p>
             <div class="list-box" id="expenses">
-                <p class="item">List Items <span>$ 200</span></p> 
+                <p class="item">Sample Item <span>$ 200</span></p> 
             </div>
             <div class="list-box ">
-                
-                <!-- ===== Actual Budget ===== -->
-                <div ><p class="budget">Budget: $ <span id="total"></span></p></div>  
+              <!-- ===== Actual Budget ===== -->
+                <div ><p class="budget fix">Budget: $ <span id="total"></span></p></div>  
                 <div ><p class="budget left">Left: $ <span id="left"></span></p></div>  
-                <!-- <div ><p class="budget2">Budget: $ 500</p></div>   -->
-                <!-- <div ><p class="budget3">Budget: $ 500</p></div>   -->
+                
             </div> 
         </div>
     </div>
